# raspishno

./: .gitignore
backend/: .env.template  alembic.ini  docker-compose.yml  main.py  pyproject.toml  sync_config.env.template  sync_db.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_03_2156-3e68c64bdcbe_create_users_table.py  2026_06_07_1436-1eae540eaffc_model_building.py  2026_06_08_2100-24a399127bc8_model_practice.py  2026_06_08_2105-5157600a5c17_model_subject.py  2026_06_18_1516-6c6d6be5a8af_add_mixins_schedule.py  2026_06_18_1532-6ff92647e050_add_mixins_teacher.py
backend/app/: app.py
backend/app/api/: __init__.py
backend/app/api/crud/: users.py
backend/app/api/dependencies/authentication/: __init__.py  (+2 more)
backend/app/api/routers/: __init__.py
backend/app/core/authentication/: __init__.py  backend.py  refresh_token.py  strategy.py  transport.py  user_manager.py
backend/app/core/config/: __init__.py  api_auth_config.py  api_config.py  cors_config.py  database_config.py  invitations_config.py  main_config.py  run_config.py  uploads_config.py
backend/app/core/models/: __init__.py  building.py  group.py  practice.py  schedule.py  speciality.py  specialty.py  subject.py  teacher.py  time.py  user.py
backend/app/core/schemas/: __init__.py  base.py  building.py  group.py  user.py
backend/app/enums/: __init__.py  activity_type.py  days_of_week.py  practice_type.py  room_type.py  shift.py  time_slots.py
backend/app/tests/: conftest.py  test_auth_bearer.py  test_auth_cookie.py  test_users.py
backend/app/utils/: case_converter.py
(+29 files in other folders)
