[project]
name = "work-track"
version = "0.1.0"
description = "Внутренний корпоративный портал для управления задачами и проектами"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "filetype>=1.2.0",
    "gunicorn>=25.3.0",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.45.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["app/tests"]
